Part 2 and 3 are completed. Everything is functional and working properly.
I did not do the bonus section. It is possible I may come back and complete that when I have time.

--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -4,28 +4,25 @@
 
 <body class="container">
 
-<h1 th:text="${title}">Default Title</h1>
+    <h1 th:text="${title}">Default Title</h1>
+    <nav th:replace="fragments :: navigation"></nav>
 
-<nav th:replace="fragments :: navigation"></nav>
+    <p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
 
-<p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
+    <table class="table">
+        <tr>
+            <th>Name</th>
+            <th>Description</th>
+            <th>Category</th>
+        </tr>
+        <tr th:each="cheese : ${cheeses}">
+            <td th:text="${cheese.name}"></td>
+            <td th:text="${cheese.description}"></td>
+            <td th:text="${cheese.category.name}"></td>
+        </tr>
+    </table>
 
-
-<table class="table">
-
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Type</th>
-    </tr>
-
-    <tr th:each="cheese : ${cheeses}">
-        <td th:text="${cheese.name}"></td>
-        <td th:text="${cheese.description}"></td>
-        <td th:text="${cheese.type.name}"></td>
-    </tr>
-
-</table>
+    <nav th:replace="fragments :: cheeseNavigation"></nav>
 
 </body>
 </html>
