--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,11 +10,15 @@
 </head>
 <body>
 
-<nav th:fragment="navigation">
-    <a href="/cheese">List</a> |
+<nav th:fragment="cheeseNavigation">
     <a href="/cheese/add">Add</a> |
     <a href="/cheese/remove">Remove</a>
-    <a href="/category">Categories</a>
+</nav>
+
+<nav th:fragment="navigation">
+    <a href="/cheese">Home</a> |
+    <a href="/category">Categories</a> |
+    <a href="/menu">Menus</a>
 </nav>
 
 </body>
