--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
+
 <head th:replace="fragments :: head"></head>
 
 <body class="container">
-
     <h1 th:text="${title}">Default Title</h1>
     <nav th:replace="fragments :: navigation"></nav>
 
     <ul>
-        <li th:each="category : ${categories}" th:text="${category.name}">
+        <li th:each="menu : ${menus}">
+            <a th:href="'menu/view/' + ${menu.id}"  th:text="${menu.name}"></a>
         </li>
     </ul>
 
     <nav>
-        <a href="category/add">Add Category</a>
+        <a href="/menu/add">Add Menu</a>
     </nav>
-
 </body>
 </html>
