--- a/src/main/resources/templates/menu/view.html
+++ b/src/main/resources/templates/menu/view.html
@@ -3,18 +3,13 @@
 <head th:replace="fragments :: head"></head>
 
 <body class="container">
-
     <h1 th:text="${title}">Default Title</h1>
     <nav th:replace="fragments :: navigation"></nav>
 
     <ul>
-        <li th:each="category : ${categories}" th:text="${category.name}">
-        </li>
+        <li th:each="cheese : ${menu.cheeses}" th:text="${cheese.name}"></li>
     </ul>
 
-    <nav>
-        <a href="category/add">Add Category</a>
-    </nav>
-
+    <p><a th:href="'/menu/add-item/' + ${menu.id}">Add Cheese</a></p>
 </body>
 </html>
